--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,1 +1,11 @@
 @import "bootstrap";
+
+.navbar {
+  font-family: 'galano_grotesque_demobold';
+  background: image_url('2978630.png');
+  box-shadow: 0px 1px 3px #2a2a2a;
+}
+
+.navbar-light, a.navbar-brand {
+
+}
