--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -10,3 +10,25 @@
     <br /><br />
   </div>
 </div>
+
+<br />
+
+<div class="row feature text-center">
+  <div class="col-12 col-sm">
+    <h3>Music</h3>
+    <br />
+    <p>Under-the-radar originals and covers of your favorites tracks.</p>
+  </div>
+
+  <div class="col-12 col-sm">
+    <h3>Comedy</h3>
+    <br />
+    <p>The best new stand-up, sketch and improv.</p>
+  </div>
+
+  <div class="col-12 col-sm">
+    <h3>Poetry & Prose</h3>
+    <br />
+    <p>The front page of spoken word.</p>
+  </div>
+</div>
