--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -2,7 +2,7 @@
 
 .navbar {
   font-family: 'galano_grotesque_demobold';
-  background: image_url('navbar.png');
+  background: image_url('navbar.jpg');
   box-shadow: 0px 1px 3px #2a2a2a;
 }
 
@@ -43,4 +43,15 @@ h1, h2, h3, h4, h5, h6, .navbar {
 
 .btn {
   border-radius: 0;
+}
+
+.feature {
+  width: 100%;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+body {
+  background: image_url('bg.png');
+  font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 }
