--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,9 +2,9 @@
   <br />
   <div class="frosty col-10 offset-1 text-center">
     <br />
-    <h1>Learn Magic from the Pros</h1>
+    <h1>Learn to Perform</h1>
     <br />
-    <h2>I'm an illusionist, Michael.</h2>
+    <h2>Unleash your inner artist</h2>
     <br />
     <%= link_to 'Learn More', '#', class: 'btn btn-success' %>
     <br /><br />
@@ -15,20 +15,20 @@
 
 <div class="row feature text-center">
   <div class="col-12 col-sm">
-    <h3>Music</h3>
+    <h3>Covers</h3>
     <br />
-    <p>Under-the-radar originals and covers of your favorites tracks.</p>
+    <p>Play your favorite songs</p>
   </div>
 
   <div class="col-12 col-sm">
-    <h3>Comedy</h3>
+    <h3>Songwriting</h3>
     <br />
-    <p>The best new stand-up, sketch and improv.</p>
+    <p>Craft your own music</p>
   </div>
 
   <div class="col-12 col-sm">
-    <h3>Poetry & Prose</h3>
+    <h3>Performance & Recording</h3>
     <br />
-    <p>The front page of spoken word.</p>
+    <p>Get your stuff out there and let the world hear it!</p>
   </div>
 </div>
