--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,14 +1,24 @@
 @import "bootstrap";
 
+.clr {
+  clear: both;
+}
+
 .navbar {
   font-family: 'galano_grotesque_demobold';
   background: image_url('navbar.jpg');
   box-shadow: 0px 1px 3px #2a2a2a;
+  a {
+    color: rgba(0, 0, 0, 0.5);
+  }
+  a:hover {
+    text-decoration: none;
+  }
 }
 
-.navbar-light, a.navbar-brand {
+// .navbar-light, a.navbar-brand {
 
-}
+// }
 
 .hero {
   background: image_url('hero.jpg') no-repeat center center fixed;  
