--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -91,3 +91,25 @@ body {
   padding: 2px 8px 2px 8px;
   margin: 10px;
 }
+
+.lesson {
+  background-color: black;
+  margin-top: 10px;
+  height: 130px;
+  a {
+    color: white;
+    font-family: "Helvetica Neue", Helvetica;
+    font-weight: 100;
+    font-size: 15px;
+    b {
+      font-weight: 100;
+      font-size: 25px;
+    }
+  }
+}
+
+.section {
+  border: 1px solid;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  padding: 20px;
+}
