--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -149,3 +149,8 @@ ul .header {
     margin: 0;
   }
 }
+
+hr.course-separator {
+  border-top: 1px solid #8c8b8b;
+  border-bottom: 1px solid #fff;
+}
