--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -29,6 +29,6 @@
   <div class="col-12 col-sm">
     <h3>Performance & Recording</h3>
     <br />
-    <p>Get your stuff out there and let the world hear it!</p>
+    <p>Get your stuff out there and let the world hear it</p>
   </div>
 </div>
