--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -17,15 +17,15 @@ body {
   width: 100%;
   min-height: 100px;
   background-color: rgba(36, 32, 33, 0.9);
-  color: white;
+  color: #EBCEBC;
   font-family: "Helvetica Neue", Helvetica;
   padding: 10px 0px;
   margin-top: 30px;
-  font-weight: 100;
+  font-weight: 200;
 }
 
 #footer a {
-  color: white;
+  color: #EBCEBC;
   font-weight: 100;
 }
 
