--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -6,8 +6,9 @@
 }
 
 .navbar {
-  font-family: 'galano_grotesque_demobold';
-  background: image_url('navbar.jpg');
+  font-family: 'Permanent Marker', cursive;
+  background: image_url('navbar.png');
+  background-color: #0091ff;
   box-shadow: 0px 1px 3px #2a2a2a;
   a {
     color: rgba(0, 0, 0, 0.5);
@@ -15,10 +16,26 @@
   a:hover {
     text-decoration: none;
   }
+  .navbar-nav {
+    font-family: 'Baloo Paaji', cursive;
+  }
 }
 
-// .navbar-light, a.navbar-brand {
+.navbar-brand {
+  font-size: 2rem;
+  padding-bottom: 5px;
+}
 
+.all-courses {
+  padding-top: 10px;
+}
+
+// .my-dashboard {
+//   padding-top: 10px;
+// }
+
+// .sign-out {
+//   padding-top: 2px;
 // }
 
 .hero {
@@ -37,42 +54,66 @@ h1, h2, h3, h4, h5, h6, .navbar {
 
 .frosty {
   background: rgba(0, 0, 0, 0.5);
-  color: white;
+  // color: #FFF3EB;
+  color: #FFE7D6;
 }
 
 .frosty h1 {
-  font-family: "Helvetica Neue", Helvetica;
+  // font-family: "Helvetica Neue", Helvetica;
+  // font-family: 'Averia Sans Libre', cursive;
+  font-family: 'Baloo Paaji', cursive;
   font-weight: 100;
   text-shadow: rgba(0, 0, 0, 0.95) 1px 1px;
 }
 
 .frosty h2 {
-  font-family: "Helvetica Neue", Helvetica;
+  // font-family: "Helvetica Neue", Helvetica;
+  // font-family: 'Averia Sans Libre', cursive;
+  font-family: 'Baloo Paaji', cursive;
   font-weight: 200;
   text-shadow: rgba(0, 0, 0, 0.95) 1px 1px;  
 }
 
 .btn {
   border-radius: 0;
+  background-color: #FF6E00;
+  border: none;
+  color: black;
+}
+
+.btn:hover {
+  background-color: #12FF00;
+  border-color: none;
+  text-decoration: none;
 }
 
 .feature {
   width: 100%;
   padding-left: 5%;
   padding-right: 5%;
+  color: #EBCEBC;
 }
 
 body {
   background: image_url('bg.png');
   // font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
-  font-family: 'galano_grotesque_demobold';
+  // font-family: 'Averia Sans Libre', cursive;;
+  font-family: 'Baloo Paaji', cursive;
+  a {
+    color: #0091ff;
+  }
+  a:hover {
+    text-decoration: none;
+  }
 }
 
 .booyah-box {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
   -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
   box-shadow: 1px 1px 2px 0 #d0d0d0;
-  background: #fff;
+  // background: #fff;
+  background: #FFE7D6;
+  // background: #EBCEBC;
   border: 1px solid #ccc;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   margin-top: 10px;
@@ -154,3 +195,8 @@ hr.course-separator {
   border-top: 1px solid #8c8b8b;
   border-bottom: 1px solid #fff;
 }
+
+.alert-info, .alert-danger {
+  margin-bottom: 0;
+}
+
