Modified application.js require order to make javascript work on Heroku. Also added Careers image, adjusted font colors

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -91,7 +91,8 @@ h1, h2, h3, h4, h5, h6, .navbar {
   width: 100%;
   padding-left: 5%;
   padding-right: 5%;
-  color: #EBCEBC;
+  // color: #EBCEBC;
+  color: #FFE7D6;
 }
 
 body {
