--- a/app/views/static_pages/careers.html.erb
+++ b/app/views/static_pages/careers.html.erb
@@ -3,7 +3,5 @@
 <div class="booyah-box col-10 offset-1">
   <h1>Come work for us!</h1>
 
-  <p>
-    I can't pay :(
-  </p>
+  <%= image_tag("careers.jpg", class: 'img-fluid') %>
 </div>
