--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -17,7 +17,8 @@ body {
   width: 100%;
   min-height: 100px;
   background-color: rgba(36, 32, 33, 0.9);
-  color: #EBCEBC;
+  // color: #EBCEBC;
+  color: #FFE7D6;
   font-family: "Helvetica Neue", Helvetica;
   padding: 10px 0px;
   margin-top: 30px;
@@ -25,7 +26,8 @@ body {
 }
 
 #footer a {
-  color: #EBCEBC;
+  // color: #EBCEBC;
+  color: #FFE7D6;  
   font-weight: 100;
 }
 
