--- a/app/views/static_pages/privacy.html.erb
+++ b/app/views/static_pages/privacy.html.erb
@@ -4,6 +4,6 @@
   <h1>Privacy Policy</h1>
 
   <p>
-    We do not give your email address to anyone.  All $ transactions are handled by a secure third-party provider.
+    We do not give your email address to anyone, and we do not store your $ info.  All $ transactions are handled by a secure third-party provider.
   </p>
 </div>
