--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,9 +2,9 @@
   <br />
   <div class="frosty col-10 offset-1 text-center">
     <br />
-    <h1>Learn to Perform</h1>
+    <h1>Make Beautiful Music</h1>
     <br />
-    <h2>Unleash your inner artist</h2>
+    <h3>Unleash your inner artist</h3>
     <br />
     <%= link_to 'Learn More', courses_path, class: 'btn btn-success' %>
     <br /><br />
@@ -17,18 +17,27 @@
   <div class="col-12 col-sm">
     <h3>Covers</h3>
     <br />
-    <p>Play your favorite songs</p>
+    <p>Play your favorites</p>
+    <%= image_tag("covers.jpg", class: 'img-fluid') %>
+    <br />
+    <br />
   </div>
 
   <div class="col-12 col-sm">
     <h3>Songwriting</h3>
     <br />
     <p>Craft your own music</p>
+    <%= image_tag("songwriting.jpg", class: 'img-fluid') %>
+    <br />
+    <br />    
   </div>
 
   <div class="col-12 col-sm">
-    <h3>Performance & Recording</h3>
+    <h3>Recording</h3>
     <br />
-    <p>Get your stuff out there and let the world hear it</p>
+    <p>Let the world hear it</p>
+    <%= image_tag("recording.jpg", class: 'img-fluid') %>
+    <br />
+    <br />        
   </div>
 </div>
