--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -85,6 +85,11 @@ h1, h2, h3, h4, h5, h6, .navbar {
   background-color: #12FF00;
   border-color: none;
   text-decoration: none;
+  color: black;
+}
+
+.badge-info {
+  color: black;
 }
 
 .feature {
@@ -155,6 +160,8 @@ body {
   border: 1px solid;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   padding: 20px;
+  // background: #FF6E00;
+  background: #0091ff;
 }
 
 ul {
@@ -166,6 +173,7 @@ ul {
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   padding: 20px;
   margin: 20px;
+  background: #0091ff;
 }
 
 ul .header {
@@ -199,5 +207,11 @@ hr.course-separator {
 
 .alert-info, .alert-danger {
   margin-bottom: 0;
+}
+
+.payment-disclaimer {
+  background: yellow;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
