A few more adjustments

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -144,6 +144,7 @@ body {
   background-color: black;
   margin-top: 10px;
   height: 130px;
+  padding: 10px;
   a {
     color: white;
     font-family: "Helvetica Neue", Helvetica;
@@ -214,4 +215,5 @@ hr.course-separator {
   padding-left: 5px;
   padding-right: 5px;
 }
+
 
