--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -1,6 +1,7 @@
 <br />
 
 <div class="booyah-box col-10 offset-1">
+  <h1><%= current_lesson.section.title %></h1>
   <h1><%= current_lesson.title %></h1>
   <p class="float-left">
     <%= current_lesson.subtitle %>
